--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,13 +120,12 @@ jobs:
 
       - name: Check Coverage Thresholds
         if: matrix.node-version == 20
-        continue-on-error: true  # Warning only while fixing tests
         run: |
           if [ -f coverage/coverage-summary.json ]; then
             COVERAGE=$(cat coverage/coverage-summary.json | jq '.total.lines.pct')
             echo "Coverage: $COVERAGE%"
             if (( $(echo "$COVERAGE < 60" | bc -l) )); then
-              echo "⚠️ Coverage $COVERAGE% is below 60% threshold"
+              echo "❌ Coverage $COVERAGE% is below 60% threshold"
               exit 1
             fi
             echo "✅ Coverage $COVERAGE% meets threshold"
